--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "myprof",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kiyo7.github.io/myprofile",
+  "homepage": "https://kiyo7.github.io/kiyoooooooo",
   "dependencies": {
     "@ant-design/icons": "^4.6.4",
     "@emotion/react": "^11.4.1",
