--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "scrollreveal": "^4.0.9",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
