--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "myprof",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kiyo7.github.io/kiyoooooooo",
+  "homepage": "https://kiyo7.github.io/",
   "dependencies": {
     "@ant-design/icons": "^4.6.4",
     "@emotion/react": "^11.4.1",
@@ -16,6 +16,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.13",
+    "dotenv": "^10.0.0",
+    "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
