--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/scrollreveal": "^0.0.7",
+    "@types/styled-components": "^5.1.21",
     "antd": "^4.16.13",
     "dotenv": "^10.0.0",
     "emailjs-com": "^3.2.0",
@@ -24,6 +29,7 @@
     "react-scripts": "4.0.3",
     "scrollreveal": "^4.0.9",
     "styled-components": "^5.3.1",
+    "typescript": "~4.1.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
